custom messages for semantic errors